--- a/Ecommerce MVC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Ecommerce MVC/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Ecommerce_MVC
 @using Bookoria.Models
+@using Ecommerce_MVC.Models.ViewModels
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
