--- a/Ecommerce MVC/Views/Shared/_Layout.cshtml.css
+++ b/Ecommerce MVC/Views/Shared/_Layout.cshtml.css
@@ -7,10 +7,10 @@ a.navbar-brand {
   word-break: break-all;
 }
 
-a {
+/*a {
   color: #0077cc;
 }
-
+*/
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
@@ -18,7 +18,7 @@ a {
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
+  color: #ffffff;
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
